control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/0-namespaces.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

# These namespaces can be used for examples without recreating them each time.
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-example-ns1
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-example-ns2
