control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/reference-grant.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

#$ Used in:
#$ - site-src/concepts/security-model.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-prod-traffic
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: prod
  to:
  - group: ""
    kind: Service
