control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/http-request-header-set.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: header-http-echo
spec:
  parentRefs:
    - name: acme-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /edit-a-request-header
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: my-header-name
                value: my-new-header-value
      backendRefs:
        - name: echo
          port: 8080
